--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         .collapse {
             visibility: collapse;
         }
-        /* Additional styling to make the page look fancy */
         body {
             font-family: 'Arial', sans-serif;
         }
@@ -71,10 +70,10 @@
 <br>
 <br>
 <br>
-<h1 class="ui center aligned large header" data-aos="fade-up">1. Clustering Visualization with 3D tSNE (이런거 다 쉬운 한국말로...?)</h1>
+<h1 class="ui center aligned large header" data-aos="fade-up">1. Visualization of User Clusters</h1>
 <br>
 <div class="iframe-container" data-aos="fade-up">
-    <iframe src="https://danielmoon2001.github.io/Basic_Computing__2020_Fall/tsne.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
+    <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/tsne.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
 </div>
 <br>        
 <br>
@@ -87,10 +86,10 @@
 <br>
 <br>
 <br>
-<h1 class="ui center aligned large header" data-aos="fade-up">2. Sankey Diagram of Time Series Clusters</h1>
+<h1 class="ui center aligned large header" data-aos="fade-up">2. Visualization of Cluster Time Series</h1>
 <br>
 <div class="iframe-container" data-aos="fade-up">
-    <iframe src="https://danielmoon2001.github.io/Basic_Computing__2020_Fall/sankey.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
+    <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/sankey.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
 </div>
 <br>
 <br>
