--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <title>GH x Honest Flowers</title>
-    <link rel="stylesheet" type="text/css" href="Semantic-UI-CSS-master/semantic.min.css">
-    <script src="Semantic-UI-CSS-master/semantic.min.js"></script>
+    <!-- Using CDN for Semantic UI -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
         .collapse {
