--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <br>
 <br>
 <br>
-<h1 class="ui center aligned large header" data-aos="fade-up">2. Visualization of Cluster Time Series</h1>
+<h1 class="ui center aligned large header" data-aos="fade-up">2. Visualization of Cluster Transitions</h1>
 <br>
 <div class="iframe-container" data-aos="fade-up">
     <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/sankey.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
