--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .x-char {
             font-size: 2em;
             font-weight: bold;
-            color: darkgreen; /* Dark green color */
+            color: #005000; /* Dark green color */
         }
         .custom-header {
         font-size: 1.5em; /* Smaller size */
