--- a/index.html
+++ b/index.html
@@ -93,6 +93,22 @@
 <div class="iframe-container" data-aos="fade-up">
     <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/sankey.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
 </div>
+<br>        
+<br>
+<br>
+<br>
+<br>
+<br>        
+<br>
+<br>
+<br>
+<br>
+<br>
+<h1 class="ui center aligned large header" data-aos="fade-up">3. Visualization of New Users' Clusters</h1>
+<br>
+<div class="iframe-container" data-aos="fade-up">
+    <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/newUsers.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
+</div>
 <br>
 <br>
 <br>
