--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <br>
 <br>
 <br>
-<h1 class="ui center aligned large header" data-aos="fade-up">1. Visualization of User Clusters</h1>
+<h1 class="ui center aligned large header" data-aos="fade-up">1. 고객 클러스터 분포</h1>
 <br>
 <div class="iframe-container" data-aos="fade-up">
     <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/tsne.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
@@ -88,7 +88,7 @@
 <br>
 <br>
 <br>
-<h1 class="ui center aligned large header" data-aos="fade-up">2. Visualization of Cluster Transitions</h1>
+<h1 class="ui center aligned large header" data-aos="fade-up">2. 클러스터 전환 양상 (2022.08 고객층)</h1>
 <br>
 <div class="iframe-container" data-aos="fade-up">
     <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/sankey.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
@@ -104,7 +104,7 @@
 <br>
 <br>
 <br>
-<h1 class="ui center aligned large header" data-aos="fade-up">3. Visualization of New Users' Clusters</h1>
+<h1 class="ui center aligned large header" data-aos="fade-up">3. 신규고객 클러스터 분포</h1>
 <br>
 <div class="iframe-container" data-aos="fade-up">
     <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/newUsers.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
