--- a/index.html
+++ b/index.html
@@ -34,11 +34,36 @@
             color: #005000; /* Dark green color */
         }
         .custom-header {
-        font-size: 1.5em; /* Smaller size */
-        font-family: 'Georgia', serif; /* Professional font */
-        color: grey; /* Slightly grey color */
-        text-align: center; /* Center aligned */
-        margin-top: 2em; /* Adjust margin as needed */
+            font-size: 1.5em; /* Smaller size */
+            font-family: 'Georgia', serif; /* Professional font */
+            color: grey; /* Slightly grey color */
+            text-align: center; /* Center aligned */
+            margin-top: 2em; /* Adjust margin as needed */
+        }
+        .legend-container {
+            border: 2px solid #005000; /* Dark green border */
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin: 20px auto;
+            width: fit-content;
+        }
+        .legend-item {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .legend-button {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            display: inline-block;
+        }
+        .legend-text {
+            font-family: 'Arial', sans-serif;
+            font-size: 1em;
         }
     </style>
 </head>
@@ -54,7 +79,7 @@
     <img src="GH_brand.jpg" alt="Local Image 1">
     <div class="x-char">x</div>
     <img src="HF_brand_white.png" alt="Local Image 2">
-</div>        
+</div>
 <br>
 <h2 class="custom-header" data-aos="fade-up">Appendix: Interactive Diagrams</h2>
 <br>
@@ -69,6 +94,28 @@
 <br>
 <br>
 <br>
+<div class="legend-container">
+    <div class="legend-item">
+        <div class="legend-button" style="background-color: red;"></div>
+        <div class="legend-text">1. 방황하는 초보 고객</div>
+    </div>
+    <div class="legend-item">
+        <div class="legend-button" style="background-color: blue;"></div>
+        <div class="legend-text">2. 필요할 때 찾는 철새 고객</div>
+    </div>
+    <div class="legend-item">
+        <div class="legend-button" style="background-color: orange;"></div>
+        <div class="legend-text">3. 말 많은 세미 단골</div>
+    </div>
+    <div class="legend-item">
+        <div class="legend-button" style="background-color: lightgreen;"></div>
+        <div class="legend-text">4. 묵묵한 찐 단골</div>
+    </div>
+    <div class="legend-item">
+        <div class="legend-button" style="background-color: violet;"></div>
+        <div class="legend-text">5. 떠난 고객</div>
+    </div>
+</div>
 <br>
 <br>
 <h1 class="ui center aligned large header" data-aos="fade-up">1. 고객 클러스터 분포</h1>
@@ -76,12 +123,11 @@
 <div class="iframe-container" data-aos="fade-up">
     <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/tsne.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
 </div>
-<br>        
 <br>
 <br>
 <br>
 <br>
-<br>        
+<br>
 <br>
 <br>
 <br>
@@ -92,12 +138,11 @@
 <div class="iframe-container" data-aos="fade-up">
     <iframe src="https://danielmoon2001.github.io/GH_HF_diagrams/sankey.html" width="1300" height="800" frameborder="0" data-aos="fade-up" style="display:block; margin:auto;"></iframe>
 </div>
-<br>        
 <br>
 <br>
 <br>
 <br>
-<br>        
+<br>
 <br>
 <br>
 <br>
@@ -122,4 +167,4 @@
     });
 </script>
 </body>
-</html> 
+</html>
