--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <br>
 <br>
 <br>
-<div class="legend-container">
+<div class="legend-container" data-aos="fade-up">
     <div class="legend-item">
         <div class="legend-button" style="background-color: #b30000;"></div> <!-- Darker red -->
         <div class="legend-text">방황하는 초보 고객</div>
