--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             margin-top: 2em; /* Adjust margin as needed */
         }
         .legend-container {
-            border: 0.5px solid #005000; /* Dark green border, thinner */
+            border: none; /* Dark green border, thinner */
             padding: 10px;
             display: flex;
             justify-content: center;
@@ -63,7 +63,7 @@
         }
         .legend-text {
             font-family: 'Arial', sans-serif;
-            font-size: 1.5em; /* h2 size */
+            font-size: 1em; 
         }
     </style>
 </head>
