--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="legend-text"> 묵묵한 찐 단골</div>
     </div>
     <div class="legend-item">
-        <div class="legend-button" style="background-color: #993399;"></div> <!-- Darker violet -->
+        <div class="legend-button" style="background-color: #9467bd;"></div> <!-- Darker violet -->
         <div class="legend-text"> 떠난 고객</div>
     </div>
 </div>
